Fix issue with overflow content from jetpack carousel.
Still not working on archive pages, due to bug of swiper lib:

https://github.com/nolimits4web/swiper/issues/2914

Also add proper page title for search results page

--- a/sass/components/blocks/_style.scss
+++ b/sass/components/blocks/_style.scss
@@ -43,10 +43,12 @@
 // Reset for sidebar-enabled pages.
 // Don't adjust the width and margin for elements inside a grid column.
 .sidebar-left .entry-content .alignwide,
-.sidebar-left .entry-summary .alignwide,
-.sidebar-right .entry-content .alignwide,
-.sidebar-right .entry-summary .alignwide,
 .sidebar-left .entry-content .alignfull,
+.sidebar-left .entry-summary .alignwide,
+.sidebar-left .entry-summary .alignfull,
+.sidebar-right .entry-content .alignwide,
+.sidebar-right .entry-content .alignfull,
+.sidebar-right .entry-summary .alignwide,
 .sidebar-right .entry-summary .alignfull,
 .wp-block-jetpack-layout-grid-column .alignwide {
 	margin-left: 0;
